Fix SAFE-T1404 references and tags
Signed-off-by: shekharchaudhary <shekharchaudhary@users.noreply.github.com>

--- a/techniques/SAFE-T1404/detection-rule.yml
+++ b/techniques/SAFE-T1404/detection-rule.yml
@@ -8,7 +8,7 @@ description: Detects signs of suppressed disclosure in agent prompts and output 
 author: Shekhar Chaudhary
 date: 2025-10-25
 references:
-  - https://github.com/SAFE-MCP/safe-mcp/techniques/SAFE-T1404
+  - https://github.com/SAFE-MCP/safe-mcp/blob/main/techniques/SAFE-T1404/README.md
 logsource:
   product: mcp
   service: host
@@ -39,4 +39,5 @@ level: medium
 tags:
   - attack.defense-evasion
   - attack.t1562
+  - attack.t1564
   - safe.t1404
